Added to package.json for deployment.

--- a/package.json
+++ b/package.json
@@ -240,5 +240,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "engines": {
+    "node": "16.14.0"
+  }
 }
