--- a/package.json
+++ b/package.json
@@ -237,6 +237,7 @@
     "yallist": "^4.0.0"
   },
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
